--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
-    "vite": "^6.2.4",
+    "vite": "7.1.11",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
